deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-kube
  namespace: ci
spec:
  ports:
  - name: tcp-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    name: nexus-kube
  sessionAffinity: None
  type: ClusterIP
